# news-recommendation-engine

./: .gitignore  README.md  configura.py  pyproject.toml  requirements.txt  wsgi.py
collaborative_filtering/: EmbeddingLayer.py  collaborative_ae.py  svd.pkl
content_based/: content_ae.py
helpers/: train_recommender.py
recommender_api/: article_loader.py  recommender.py
table_models/: Artc.py  Intr.py
