[tool.poetry]
name = "news-recommendation-system"
version = "0.1.0"
description = "a service based on Flask for recommending news contents"
authors = ["Olasimbo Arigbabu"]

[tool.poetry.dependencies]
python = "3.9.5"
virtualenv = "^20.16.5"
Flask = "^2.2.2"
Flask-SQLAlchemy = "^2.5.1"
scikit-learn = "^1.1.2"
keras = "^2.10.0"
tensorflow = "^2.10.0"
pandas = "^1.5.0"
numpy = "^1.23.3"
scipy = "^1.9.1"
nltk = "^3.7"
SQLAlchemy = "^1.4.41"
beautifulsoup4 = "^4.11.1"
psycopg2-binary = "^2.9.3"
numba = "^0.56.2"
gunicorn = "^20.1.0"
joblib = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
